<resources>
    <string name="app_name">RestaurantsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="park">Park</string>
    <string name="coffeeshop">Coffee Shop</string>
    <string name="museum">museum</string>
    <string name="shopping">Shopping</string>
    <string name="restaurant">Restaurant</string>
    <string name="location">Current Location</string>
    <string name="search">Search Location</string>
    <string name="choose">Choose Location</string>
    <string name="latitude">UserLatitude</string>
    <string name="longitude">UserLongitude</string>
    <string name="all">All Places</string>
    <string name="share">Share</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="there_is_no_plans">There is No Plans</string>
    <string name="add_plan">Add Plan</string>
    <string name="plan_name">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="your_plan">Your Plans</string>
    <string name="plan">Plan Your Days</string>
    <string name="write_your_note_here">Write your note here</string>
    <string name="add_note">Add Note</string>
    <string name="no_places">There Is No Places To Show</string>
    <string name="toast_no_Internet">You must have an internet</string>
    <string name="RESTAURANT_API_KEY">-U1bfntUuMZ-vKhJTY-Se2qgA85B5bl22meeTZcL0QP53prEaE3lgO2RW5Rg9cbrl19_pHdhrDkvdmDzm37Nk0U1atjEGWVHXn_1Uk7t1mI5lqb36b_c7ro0gZImXnYx</string>
    <string name="WEATHER_API_KEY">803bb8a53fdd48baaa0113628201712</string>

</resources>