<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.plan.AddPlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/logo_with_cyan"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cyan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text=" ✔"
                android:textColor="@color/white"
                android:background="@color/cyan"/>

            <TextView
                android:id="@+id/gray"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/pink"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/pink"/>

            <TextView
                android:id="@+id/green"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/green"/>

            <TextView
                android:id="@+id/yellow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/yellow"/>

            <TextView
                android:id="@+id/purple"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/purple"/>

            <TextView
                android:id="@+id/orange"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/orange"/>

        </LinearLayout>

        <TextView
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cyan"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/plan_name_text_view"
            android:background="@drawable/custom_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/plan_name" />

        <TextView
            android:id="@+id/plan_date_text_view"
            android:background="@drawable/custom_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:hint="@string/date"/>

        <EditText
            android:id="@+id/plan_description_text_view"
            android:background="@drawable/custom_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:hint="@string/description" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/update_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/update"
                />

            <ImageButton
                android:id="@+id/delete_text_view"
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:padding="50dp"
                android:src="@drawable/ic_baseline_delete_24" />


        </LinearLayout>
    </LinearLayout>
</layout>